--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2947,7 +2947,10 @@ if(SDL_GPU)
     set(SDL_GPU_D3D11 1)
     set(HAVE_SDL_GPU TRUE)
   endif()
-
+  if(SDL_VIDEO_RENDER_D3D12)
+    set(SDL_GPU_D3D12 1)
+    set(HAVE_SDL_GPU TRUE)
+  endif()
   if(SDL_VIDEO_VULKAN)
     set(SDL_GPU_VULKAN 1)
     set(HAVE_SDL_GPU TRUE)
