--- a/VisualC-WinRT/SDL-UWP.vcxproj
+++ b/VisualC-WinRT/SDL-UWP.vcxproj
@@ -346,6 +346,7 @@
     <ClCompile Include="..\src\filesystem\windows\SDL_sysfsops.c" />
     <ClCompile Include="..\src\gpu\SDL_gpu.c "/>
     <ClCompile Include="..\src\gpu\d3d11\SDL_gpu_d3d11.c "/>
+    <ClCompile Include="..\src\gpu\d3d12\SDL_gpu_d3d12.c "/>
     <ClCompile Include="..\src\haptic\dummy\SDL_syshaptic.c" />
     <ClCompile Include="..\src\haptic\SDL_haptic.c" />
     <ClCompile Include="..\src\haptic\windows\SDL_dinputhaptic.c" />
