--- a/VisualC/SDL/SDL.vcxproj.filters
+++ b/VisualC/SDL/SDL.vcxproj.filters
@@ -912,7 +912,7 @@
     <ClInclude Include="..\..\include\SDL3\SDL_gpu.h">
       <Filter>API Headers</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\gpu\SDL_gpu_driver.h">
+    <ClInclude Include="..\..\src\gpu\SDL_sysgpu.h">
       <Filter>gpu</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\gpu\vulkan\SDL_gpu_vulkan_vkfuncs.h">
@@ -1575,13 +1575,13 @@
     <ClCompile Include="..\..\src\gpu\SDL_gpu.c">
       <Filter>gpu</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\gpu\vulkan\SDL_gpu_vulkan.c">
-      <Filter>gpu</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\gpu\d3d11\SDL_gpu_d3d11.c">
       <Filter>gpu</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\gpu\d3d12\SDL_gpu_d3d12.c">
+      <Filter>gpu</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\gpu\vulkan\SDL_gpu_vulkan.c">
       <Filter>gpu</Filter>
     </ClCompile>
   </ItemGroup>
