CMake fix for GPU_D3D12

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2931,7 +2931,7 @@ if(SDL_GPU)
     set(SDL_GPU_D3D11 1)
     set(HAVE_SDL_GPU TRUE)
   endif()
-  if(HAVE_D3D12_H)
+  if(SDL_RENDER_D3D12)
     sdl_glob_sources("${SDL3_SOURCE_DIR}/src/gpu/d3d12/*.c")
     set(SDL_GPU_D3D12 1)
     set(HAVE_SDL_GPU TRUE)
