--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,5 @@
 project('sdl2', 'c',
-    version : '2.28.5',
+    version : '2.30.8',
     license : 'zlib',
     meson_version : '>=0.60',
     default_options : ['c_std=none'],
@@ -85,6 +85,39 @@ platform_is_apple = (
 platform_is_unixlike_or_apple = platform_is_unixlike or platform_is_apple
 
 # END platform detection logic
+
+# Compute library named & shared object version.
+version_parts = meson.project_version().split('.')
+version_major = version_parts[0].to_int()
+version_minor = version_parts[1].to_int()
+version_patch = version_parts[2].to_int()
+binary_age = version_minor * 100 + version_patch
+if version_minor % 2 == 0
+  # Stable.
+  interface_age = version_patch
+else
+  # Development.
+  interface_age = 0
+endif
+lt_major = 0
+lt_age = binary_age - interface_age
+lt_current = lt_major + lt_age
+lt_revision = interface_age
+lt_release = '2.0'
+lt_version = '.'.join(lt_major.to_string(), lt_age.to_string(), lt_revision.to_string())
+if platform_is_apple
+  libname = 'SDL2-' + lt_release
+  libversion = '0'
+  libsoversion = '0'
+elif platform_is_unixlike and not platform_is_android
+  libname = 'SDL2-' + lt_release
+  libversion = lt_version
+  libsoversion = lt_major
+else
+  libname = 'SDL2'
+  libversion = '.'.join(version_parts)
+  libsoversion = lt_revision
+endif
 
 opt_atomic = get_option('use_atomic')
 opt_audio = get_option('use_audio')
@@ -404,10 +437,25 @@ else
     iconv_dep = fake_dep
 endif
 
-if cc.links('#include <iconv.h>\nint main() { iconv_open("", ""); }', name : 'iconv_open test', dependencies : iconv_dep)
-    cdata.set10('HAVE_ICONV', true)
-    cdata.set10('HAVE_SYSTEM_ICONV', true)
-    if iconv_dep.found()
+iconv_in_libc = cc.links('''
+    #define LIBICONV_PLUG 1
+    #include <iconv.h>
+    int main(int argc, char **argv) { iconv_open("", ""); return 0; }''',
+    name: 'libc iconv_open test',
+    dependencies: iconv_dep,
+)
+
+iconv_in_libiconv = cc.links('''
+    #include <iconv.h>
+    int main(int argc, char **argv) { iconv_open("", ""); return 0; }''',
+    name: 'libiconv iconv_open test',
+    dependencies: iconv_dep,
+)
+
+if iconv_in_libc or iconv_in_libiconv
+    cdata.set('HAVE_ICONV', 1)
+    if iconv_dep.found() and iconv_in_libiconv
+        cdata.set('SDL_USE_LIBICONV', 1)
         core_deps += iconv_dep
     endif
 endif
@@ -498,81 +546,244 @@ sane_std = '''
 
 cdata.set('SIZEOF_VOIDP', cc.sizeof('void*'))
 
-check_headers = [
-    'alloca.h',
-    'altivec.h',
-    'audioclient.h',
-    'ctype.h',
-    'ddraw.h',
-    'dinput.h',
-    'dsound.h',
-    'dxgi.h',
-    'endpointvolume.h',
-    'fcitx/frontend.h',
-    'float.h',
-    'iconv.h',
-    'immintrin.h',
-    'inttypes.h',
-    'libsamplerate.h',
-    'libunwind.h',
-    'limits.h',
-    'malloc.h',
-    'math.h',
-    'memory.h',
-    'mmdeviceapi.h',
-    'pthread.h',
-    'pthread_np.h',
-    'semaphore.h',
-    'sensorsapi.h',
-    'signal.h',
-    'stdarg.h',
-    'stdint.h',
-    'stddef.h',
-    'stdio.h',
-    'stdlib.h',
-    'string.h',
-    'strings.h',
-    'sys/inotify.h',
-    'sys/types.h',
-    'wchar.h',
-
-    'linux/input.h',
-
-    'usbhid.h',
-    'libusbhid.h',
-    'usb.h',
+foreach _spec : [
+  ['alloca.h'],
+  ['altivec.h'],
+  ['audioclient.h'],
+  ['ctype.h'],
+  ['ddraw.h'],
+  ['dinput.h'],
+  ['dsound.h'],
+  ['dxgi.h'],
+  [
+    'dlfcn.h',
+    {
+      'syms': '''
+        dlopen
+      ''',
+    },
+  ],
+  ['fcntl.h', {
+    'syms': '''
+      O_CLOEXEC
+    ''',
+    },
+  ],
+  ['float.h'],
+  ['iconv.h'],
+  ['immintrin.h'],
+  ['inttypes.h'],
+  ['libunwind.h'],
+  [
     'libusb.h',
-
-    'd3d.h',
-    'd3d11.h',
-    'd3d12.h',
-    'windows.gaming.input.h',
-    'xinput.h',
+    {
+      'deps': libusb_dep,
+    },
+  ],
+  ['libusbhid.h'],
+  ['limits.h'],
+  ['linux/input.h'],
+  ['malloc.h'],
+  [
+    'math.h',
+    {
+      'syms': '''
+         M_PI
+         acos acosf asin asinf atan atan2 atan2f atanf
+         ceil ceilf copysign copysignf cos cosf exp expf
+         fabs fabsf floor floorf fmod fmodf
+         log log10 log10f logf lround lroundf
+         pow powf
+         round roundf
+         scalbn scalbnf sin sinf sqrt sqrtf
+         tan tanf trunc truncf
+       ''',
+    },
+  ],
+  ['memory.h'],
+  ['mmdeviceapi.h'],
+  [
+    'poll.h',
+    {
+      'syms': '''
+        poll
+      ''',
+    },
+  ],
+  [
+    'pthread.h',
+    {
+      'syms': '''
+        pthread_set_name_np pthread_setname_np
+      ''',
+    },
+  ],
+  ['pthread_np.h'],
+  [
+    'semaphore.h',
+    {
+      'syms': '''
+        sem_timedwait
+      ''',
+    },
+  ],
+  ['sensorsapi.h'],
+  [
+    'setjmp.h',
+    {
+      'syms': '''
+        setjmp
+      ''',
+    },
+  ],
+  [
+    'signal.h',
+    {
+      'syms': '''
+        sigaction
+      ''',
+    },
+  ],
+  ['stdarg.h'],
+  ['stddef.h'],
+  ['stdint.h'],
+  ['stdio.h', {
+    'syms': '''
+      fopen64 fseeko fseeko64
+      vsnprintf vsscanf
+    '''
+    },
+  ],
+  [
+    'stdlib.h',
+    {
+      'syms': '''
+        _Exit _i64toa _uitoa _ultoa
+        abs alloca atof atoi
+        bsearch
+        getenv
+        itoa
+        malloc
+        putenv
+        qsort
+        setenv strtod strtol strtoll strtoul strtoull
+      ''',
+    },
+  ],
+  [
+    'stlib.h',
+    {
+      'syms': '''
+        _ltoa
+      ''',
+    },
+  ],
+  [
+    'string.h',
+    {
+      'syms': '''
+        _stricmp _strlwr _strnicmp _strrev _strupr
+        memcmp memcpy memmove memset
+        strchr strcmp strlcat strlcpy strlen strncmp strrchr strstr strtok_r
+      ''',
+    },
+  ],
+  [
+    'strings.h',
+    {
+      'syms': '''
+        bcopy
+        index
+        rindex
+        strcasecmp strncasecmp
+      ''',
+    },
+  ],
+  [
+    'sys/auxv.h',
+    {
+      'syms': '''
+        elf_aux_info
+        getauxval
+      ''',
+    },
+  ],
+  [
+    'sys/inotify.h',
+    {
+      'syms': '''
+        inotify_init inotify_init1
+      ''',
+    },
+  ],
+  [
+    'sys/sysctl.h',
+    {
+      'syms': '''
+        sysctlbyname
+      ''',
+    },
+  ],
+  ['sys/types.h'],
+  [
+    'time.h',
+    {
+      'syms': '''
+        clock_gettime
+        nanosleep
+      ''',
+    },
+  ],
+  [
+    'unistd.h',
+    {
+      'syms': '''
+        getpagesize
+        sysconf
+      ''',
+    },
+  ],
+  ['usb.h'],
+  ['usbhid.h'],
+  [
+    'wchar.h',
+    {
+      'syms': '''
+        _wcsdup _wcsicmp _wcsnicmp
+        wcscmp wcsdup wcslen wcsncmp wcsstr
+      ''',
+    },
+  ],
+  ['windows.gaming.input.h'],
 ]
-
-foreach h : check_headers
-    if cc.check_header(h, dependencies : core_deps)
-        cdata.set('HAVE_@0@'.format(h.to_upper().underscorify()), 1)
+  _hdr = _spec[0]
+  _spec = _spec.get(1, {})
+  _deps = _spec.get('deps', [])
+  if not cc.check_header(_hdr, dependencies: _deps)
+    continue
+  endif
+  cdata.set('HAVE_@0@'.format(_hdr.to_upper().underscorify()), 1)
+  foreach _fn : _spec.get('syms', '').split()
+    if cc.has_header_symbol(_hdr, _fn, dependencies: _deps, prefix: sane_std)
+      cdata.set('HAVE_@0@'.format(_fn.underscorify().to_upper()), 1)
     endif
+  endforeach
 endforeach
+
+# xinput.h needs windows.h but does not #include it
+cdata.set10('HAVE_XINPUT_H',
+    platform_is_windows and cc.compiles('''
+        #include <windows.h>
+        #include <xinput.h>
+        int main(int argc, char **argv) {return 0;}''',
+        name : 'xinput test'
+    )
+)
 
 if platform_is_emscripten
     # TODO: properly support building with emscripten's SSE emulation
     cdata.set('SDL_DISABLE_IMMINTRIN_H', 1)
 endif
-
-check_symbols = [
-    ['O_CLOEXEC', 'fcntl.h'],
-    ['M_PI', 'math.h'],
-]
-
-foreach entry : check_symbols
-    symbol = entry[0]
-    header = entry[1]
-    if cc.has_header_symbol(header, symbol, prefix : sane_std, dependencies : core_deps)
-        cdata.set('HAVE_@0@'.format(symbol.underscorify().to_upper()), 1)
-    endif
-endforeach
 
 if cc.has_header_symbol('pthread.h', 'PTHREAD_MUTEX_RECURSIVE', prefix : sane_std)
     cdata.set('SDL_THREAD_PTHREAD_RECURSIVE_MUTEX', 1)
@@ -593,142 +804,6 @@ cdata.set('SDL_HAVE_LIBDECOR_GET_MIN_MAX',
         prefix : sane_std, dependencies : core_deps + wayland_libdecor_dep
     )
 )
-
-check_functions = [
-    ['_Exit', 'stdlib.h'],
-    ['_i64toa', 'stdlib.h'],
-    ['_ltoa', 'stlib.h'],
-    ['_stricmp', 'string.h'],
-    ['_strlwr', 'string.h'],
-    ['_strnicmp', 'string.h'],
-    ['_strrev', 'string.h'],
-    ['_strupr', 'string.h'],
-    ['_uit64toa', 'stdlib.h'],
-    ['_uitoa', 'stdlib.h'],
-    ['_ultoa', 'stdlib.h'],
-    ['_wcsdup', 'wchar.h'],
-    ['_wcsicmp', 'wchar.h'],
-    ['_wcsnicmp', 'wchar.h'],
-    ['abs', 'stdlib.h'],
-    ['bsearch', 'stdlib.h'],
-    ['acos', 'math.h'],
-    ['acosf', 'math.h'],
-    ['alloca', 'stdlib.h'],
-    ['asin', 'math.h'],
-    ['asinf', 'math.h'],
-    ['atan', 'math.h'],
-    ['atan2', 'math.h'],
-    ['atan2f', 'math.h'],
-    ['atanf', 'math.h'],
-    ['atof', 'stdlib.h'],
-    ['atoi', 'stdlib.h'],
-    ['bcopy', 'strings.h'],
-    ['calloc', 'stdlib.h'],
-    ['ceil', 'math.h'],
-    ['ceilf', 'math.h'],
-    ['clock_gettime', 'time.h'],
-    ['copysign', 'math.h'],
-    ['copysignf', 'math.h'],
-    ['cos', 'math.h'],
-    ['cosf', 'math.h'],
-    ['dlopen', 'dlfcn.h'],
-    ['elf_aux_info', 'sys/auxv.h'],
-    ['exp', 'math.h'],
-    ['expf', 'math.h'],
-    ['fabs', 'math.h'],
-    ['fabsf', 'math.h'],
-    ['floor', 'math.h'],
-    ['floorf', 'math.h'],
-    ['fmod', 'math.h'],
-    ['fmodf', 'math.h'],
-    ['fopen64', 'stdio.h'],
-    ['free', 'stdlib.h'],
-    ['fseeko', 'stdio.h'],
-    ['fseeko64', 'stdio.h'],
-    ['getauxval', 'sys/auxv.h'],
-    ['getenv', 'stdlib.h'],
-    ['getpagesize', 'unistd.h'],
-    ['index', 'strings.h'],
-    ['inotify_init', 'sys/inotify.h'],
-    ['inotify_init1', 'sys/inotify.h'],
-    ['itoa', 'stdlib.h'],
-    ['log', 'math.h'],
-    ['log10', 'math.h'],
-    ['log10f', 'math.h'],
-    ['logf', 'math.h'],
-    ['lround', 'math.h'],
-    ['lroundf', 'math.h'],
-    ['malloc', 'stdlib.h'],
-    ['memcmp', 'string.h'],
-    ['memcpy', 'string.h'],
-    ['memmove', 'string.h'],
-    ['memset', 'string.h'],
-    ['mprotect', 'sys/mman.h'],
-    ['nanosleep', 'time.h'],
-    ['poll', 'poll.h'],
-    ['pow', 'math.h'],
-    ['powf', 'math.h'],
-    ['pthread_set_name_np', 'pthread.h'],
-    ['pthread_setname_np', 'pthread.h'],
-    ['putenv', 'stdlib.h'],
-    ['qsort', 'stdlib.h'],
-    ['realloc', 'stdlib.h'],
-    ['rindex', 'strings.h'],
-    ['round', 'math.h'],
-    ['roundf', 'math.h'],
-    ['scalbn', 'math.h'],
-    ['scalbnf', 'math.h'],
-    ['sem_timedwait', 'semaphore.h'],
-    ['setenv', 'stdlib.h'],
-    ['setjmp', 'setjmp.h'],
-    ['sigaction', 'signal.h'],
-    ['sin', 'math.h'],
-    ['sinf', 'math.h'],
-    ['snprintf', 'stdio.h'],
-    ['sqrt', 'math.h'],
-    ['sqrtf', 'math.h'],
-    ['sscanf', 'stdio.h'],
-    ['strcasecmp', 'strings.h'],
-    ['strchr', 'string.h'],
-    ['strcmp', 'string.h'],
-    ['strdup', 'string.h'],
-    ['strlcat', 'string.h'],
-    ['strlcpy', 'string.h'],
-    ['strlen', 'string.h'],
-    ['strncasecmp', 'strings.h'],
-    ['strncmp', 'string.h'],
-    ['strrchr', 'string.h'],
-    ['strstr', 'string.h'],
-    ['strtod', 'stdlib.h'],
-    ['strtok_r', 'string.h'],
-    ['strtol', 'stdlib.h'],
-    ['strtoll', 'stdlib.h'],
-    ['strtoul', 'stdlib.h'],
-    ['strtoull', 'stdlib.h'],
-    ['sysconf', 'unistd.h'],
-    ['sysctlbyname', 'sys/sysctl.h'],
-    ['tan', 'math.h'],
-    ['tanf', 'math.h'],
-    ['trunc', 'math.h'],
-    ['truncf', 'math.h'],
-    ['unsetenv', 'stdlib.h'],
-    ['vsnprintf', 'stdio.h'],
-    ['vsscanf', 'stdio.h'],
-    ['wcscmp', 'wchar.h'],
-    ['wcsdup', 'wchar.h'],
-    ['wcslen', 'wchar.h'],
-    ['wcsncmp', 'wchar.h'],
-    ['wcsstr', 'wchar.h'],
-]
-
-foreach entry : check_functions
-    func = entry[0]
-    header = entry[1]
-    prefix = sane_std + '#include <@0@>'.format(header)
-    if cc.has_function(func, prefix : prefix, dependencies : core_deps)
-        cdata.set('HAVE_@0@'.format(func.underscorify().to_upper()), 1)
-    endif
-endforeach
 
 check_types = [
     ['XINPUT_GAMEPAD_EX', 'windows.h'],
@@ -940,27 +1015,31 @@ elif platform_is_windows
         cc.find_library('shell32')
     ]
 
-    # XInput is loaded dynamically
-    if cdata.get('HAVE_XINPUT_H', 0) == 1 and not get_option('use_joystick_xinput').disabled()
-        sys_joystick += 'xinput'
-        sys_haptic += 'xinput'
-    endif
+    if not get_option('use_joystick').disabled()
+        # XInput is loaded dynamically
+        if cdata.get('HAVE_XINPUT_H', 0) == 1 and not get_option('use_joystick_xinput').disabled()
+            sys_joystick += 'xinput'
+            sys_haptic += 'xinput'
+            cdata.set('SDL_JOYSTICK_XINPUT', 1)
+            cdata.set('SDL_HAPTIC_XINPUT', 1)
+        endif
 
-    dinput = cc.find_library('dinput8', required : get_option('use_joystick_dinput'))
+        dinput = cc.find_library('dinput8', required : get_option('use_joystick_dinput'))
 
-    if dinput.found()
-        extra_deps += dinput
-        sys_joystick += 'dinput'
-        sys_haptic += 'dinput'
-    endif
+        if dinput.found()
+            extra_deps += dinput
+            sys_joystick += 'dinput'
+            sys_haptic += 'dinput'
+        endif
 
-    if sys_joystick.contains('xinput') or sys_joystick.contains('dinput')
-        sys_joystick += 'rawinput'
-    endif
+        if sys_joystick.contains('xinput') or sys_joystick.contains('dinput')
+            sys_joystick += 'rawinput'
+        endif
 
-    if sys_joystick.contains('xinput') and cdata.get('HAVE_WINDOWS_GAMING_INPUT_H', 0) == 1
-        if not get_option('use_joystick_wgi').disabled()
-            sys_joystick += 'wgi'
+        if sys_joystick.contains('xinput') and cdata.get('HAVE_WINDOWS_GAMING_INPUT_H', 0) == 1
+            if not get_option('use_joystick_wgi').disabled()
+                sys_joystick += 'wgi'
+            endif
         endif
     endif
 elif platform_is_macos
@@ -1154,7 +1233,7 @@ main_link_with = []
 main_link_whole = []
 main_c_args = ['-Dmain=SDL_main']
 
-sdl2main = static_library('sdl2main',
+sdl2main = static_library('SDL2main',
     main_sources,
     include_directories : core_inc,
     c_args : [core_args, main_c_args],
@@ -1176,7 +1255,7 @@ sdl2main_dep = declare_dependency(
 
 deps = [core_deps, extra_deps]
 
-sdl2 = library('sdl2',
+sdl2 = library(libname,
     all_sources,
     include_directories : core_inc,
     c_args : core_args,
@@ -1185,6 +1264,8 @@ sdl2 = library('sdl2',
     override_options : ['c_std=none'],
     install : do_install,
     gnu_symbol_visibility: 'hidden',
+    soversion: libsoversion,
+    version: libversion,
 )
 
 if platform_is_windows and get_option('with_main')
@@ -1195,7 +1276,6 @@ sdl2_dep = declare_dependency(
     link_with : sdl2,
     dependencies : deps,
     include_directories : core_inc,
-    compile_args : c_args,
 )
 
 test_deps = []
@@ -1230,3 +1310,6 @@ meson.override_dependency('sdl2_test', sdl2_test_dep)
 if get_option('test')
     subdir('test')
 endif
+
+pkg = import('pkgconfig')
+pkg.generate(sdl2, subdirs: 'SDL2')
